fixed visual bug in which the topBar cut off suddenly

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -115,8 +115,7 @@ h6 {
 }
 
 #topBar {
-    margin-left: 23%;
-    padding-left: 5vw;
+    padding-left: 28vw;
 }
 
 #content {
